Scaffold framework-errorprone module as a JDK-21+ Error Prone plugin (Task 2)
Add the framework-errorprone leaf module: the single, isolated home for the
Error Prone dependency. Core modules (checker-qual, javacutil, dataflow,
framework, checker) stay free of the Error Prone framework and Guava.

- settings.gradle includes the module only when the build JDK is 21+ (Error
  Prone requires 21+). On Java 8/11/17 builds the module is absent, so the
  standalone annotation-processor path is unaffected. (ADR-0002)
- build.gradle depends on :framework (implementation) and the published
  error_prone_check_api 2.50.0 (latest release, matches versions.errorprone).
  Using a published artifact keeps the build-graph edge across a published
  boundary, avoiding a cycle with dataflow-errorprone (which EP consumes and
  which is built from this repo's :dataflow).
- Compiles at -source/-target 21 (not --release, which forbids --add-exports)
  with the javac --add-exports the CF needs.
- EisopCheckerFrameworkPlugin: scaffold umbrella BugChecker, a ClassTreeMatcher
  named 'eisopcf' (mirrors the CF's per-ClassTree granularity). matchClass is a
  no-op for now; driver wiring lands in Task 4.
- Registered via a hand-written META-INF/services resource rather than
  @AutoService: the auto-service processor is unreliable here because the root
  build reassigns the annotation processor path and error_prone_core drags in
  conflicting auto-service/auto-common versions. (ADR-0002 notes)

Verified: module compiles and jars; the jar contains the BugChecker service
registration; :javacutil/:dataflow/:framework runtime classpaths contain no
error_prone_check_api/error_prone_core/real guava; no dependency cycle.

Root build.gradle is unchanged.